--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-
 prerender.ts 
 
 # compiled output
@@ -42,3 +41,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Project files
+whiskey.iml
