--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "whiskeyworld",
   "version": "0.0.0",
   "scripts": {
+    "compile": "truffle compile; truffle migrate",
+    "compile-start": "truffle compile; truffle migrate; ng serve",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -34,6 +36,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.0.2",
     "rxjs": "^6.0.0",
+    "web3": "^0.18.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -59,6 +62,7 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
+    "web3": "^0.19.0",
     "webpack-cli": "^2.1.3",
     "ws": "^5.1.1",
     "xmlhttprequest": "^1.8.0"
