--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "*",
+    "web3": "^0.18.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -75,6 +76,7 @@
     "ts-node": "^6.0.2",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
+    "web3": "^0.19.0",
     "webpack": "^4.6.0"
   }
 }
