--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "core-js": "^2.5.3",
     "firebase": "^5.0.2",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "*",
