--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
+    "compile": "truffle compile; truffle migrate",
+    "compile-start": "truffle compile; truffle migrate; ng serve",
     "ng": "ng",
     "start": "ng serve",
     "test": "ng test",
@@ -38,6 +40,7 @@
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
+    "@angular/flex-layout": "6.0.0-beta.16",
     "@angular/http": "^6.0.0",
     "@angular/material": "^6.0.1",
     "@angular/platform-browser": "^6.0.0",
@@ -63,6 +66,14 @@
     "@compodoc/compodoc": "^1.1.2",
     "@types/jasmine": "^2.8.7",
     "@types/node": "^10.0.3",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
     "codelyzer": "^4.2.1",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
