--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prod:src": "ng build --prod --sourcemaps",
     "compodoc:g": "compodoc -p src/tsconfig.app.json",
     "compodoc:s": "compodoc -p src/tsconfig.app.json --serve",
-    "compodoc:w": "compodoc -p src/tsconfig.app.json --serve --watch"
+    "compodoc:w": "compodoc -p src/tsconfig.app.json --serve --watch",
+    "postinstall": "node patch.js"
   },
   "dependencies": {
     "@angular/animations": "^6.0.0",
@@ -39,8 +40,8 @@
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
     "@angular/flex-layout": "6.0.0-beta.16",
+    "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/material": "^6.0.1",
     "@angular/platform-browser": "^6.0.0",
@@ -55,11 +56,11 @@
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "*",
-    "web3": "^0.18.4",
+    "web3": "^1.0.0-beta.26",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.6.8",
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
@@ -88,7 +89,6 @@
     "ts-node": "^6.0.2",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
-    "web3": "^0.19.0",
     "webpack": "^4.6.0"
   }
 }
