--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "firebase": "^5.0.2",
     "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.3.0",
+    "openzeppelin-solidity": "^1.10.0",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "ts-helpers": "*",
